--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+
+# Ignore image files
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.tiff
+*.bmp
+*.heic
+*.webp
+HEIC/
+PNG/
+img/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
