--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,14 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    
+    # --- MODIFICA QUI ---
+    environment:
+      name: documentation
+      # Costruisce l'URL usando il tuo username e il nome della repository corrente
+      url: https://fdemusso.github.io/${{ github.event.repository.name }}/
+    # --------------------
+
     steps:
       - uses: actions/checkout@v4
       
@@ -28,22 +36,18 @@ jobs:
           python-version: '3.11'
       
       - name: Install dependencies
-        # Qui usa il percorso relativo alla root: requirements/docs.txt
         run: |
           pip install -r requirements/docs.txt
       
       - name: Build documentation
-        # Essendo mkdocs.yml nella root, non serve specificare -f
         run: mkdocs build
       
       - name: Add .nojekyll file
-        # Il sito viene generato nella cartella 'site' nella root
         run: touch site/.nojekyll
       
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # La cartella da pubblicare è 'site' (nella root)
           publish_dir: ./site
           cname: false
